--- a/src/components/releases/Release.modules.css
+++ b/src/components/releases/Release.modules.css
@@ -44,6 +44,7 @@ button{
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: #e24d43;
     text-decoration: underline;
+    margin: 8px; 
 }
 
 .albumCard{
@@ -52,4 +53,12 @@ button{
     padding: 10px;
     margin: 10px;
     width: 160px;
+    text-align: center;
+}
+
+.albumYear{
+    color: #7cd5e0;
+    text-decoration: underline;
+    text-decoration-color:#42424c;
+    margin: 2px 2px 5px 2px; 
 }
