--- a/src/components/songs/AlbumSongList.css
+++ b/src/components/songs/AlbumSongList.css
@@ -10,11 +10,16 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  color: #e24d43;
+  background-color: #313132;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+    'Lucida Sans', Arial, sans-serif;
+  width: 100vw;
 }
 
 .albumImage {
-  border: solid 1px black;
-  border-radius: 4px;
+  border: solid 1px #e24d43;
+  border-radius: 0px;
   padding: 4px;
   margin: 20px;
 }
@@ -25,6 +30,17 @@
   align-items: center;
   justify-content: center;
   text-align: center;
+  color: #e24d43;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+    'Lucida Sans', Arial, sans-serif;
+}
+
+p {
+  color: #313132;
+}
+
+h4 {
+  color: #e24d43;
 }
 
 /* ol {
