--- a/src/components/lyrics/Lyrics.css
+++ b/src/components/lyrics/Lyrics.css
@@ -1,11 +1,33 @@
-.lyricWrapper {
+
+.pageWrapper {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  font-family: Arial, Helvetica, sans-serif;
-  line-height: 1.6;
-  width: 500px;
-  margin: auto;
-  border: 3px solid green;
-  padding: 10px;
+  align-items: center;
 }
+
+.heading {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: #e24d43;
+  background-color: #313132;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+    'Lucida Sans', Arial, sans-serif;
+    width: 100vw;
+  }
+  
+.lyricWrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    line-height: 1.6;
+    width: 400px;
+    margin: auto;
+    margin-top: 10px;
+    background-color: #7cd5e0;
+    padding: 10px;
+  }
