--- a/src/components/releases/Release.modules.css
+++ b/src/components/releases/Release.modules.css
@@ -4,11 +4,25 @@ grey:#42424c,
 black:#313132,
 red:#e24d43, 
 */
-
-.artistPage, .albumCard{
+.pageWrapper, .albumCard {
     display: flex;
-    flex-direction:column;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
+}
+
+.heading {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: #e24d43;
+    background-color: #313132;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+      'Lucida Sans', Arial, sans-serif;
+    width: 100vw;
+    min-height: 150px;
+    margin-top: 5px;
 }
 
 .albumlist{
@@ -25,9 +39,22 @@ red:#e24d43,
     color: #42424c;
 }
 
+label{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 18px;
+}
+
 button{
  margin: 5px;
+ height: 40px;
+ font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
+
+input{
+    margin: 5px;
+    height: 25px;
+    padding: 5px;
+   }
 
 .pageBtn:enabled{
     color: #313132;
